# reservation

./: alembic.ini  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 13_06_ae8e902705b1_create_all_tables.py  2023_06_01_532fd3389500_create_table_waiter.py  2023_06_06_d4e486d19361_create_tablereservation.py  3f89c630d401_add_column_ager.py  64965ea2d58f_create_waiter_model.py
chat/: models.py  router.py  ws_messages.txt
models/: models.py
orders/: models.py  router.py  schemas.py
orders/test_orders/: conftest.py  test_orders.py
tasks/: tasks.py
templates/: base.html  chat.html  navbar.html  waiters.html
