[tool.poetry]
name = "reservation"
version = "0.1.0"
description = ""
authors = ["Denis <den.listapad@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.0"
flower = "^1.2.0"
pytest = "^7.3.1"
pytest-async = "^0.1.1"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
jinja2 = "^3.1.2"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"
